Implemented few REST endpoints

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Welcome to Landon Hotel</h1>
+
+    <p><a href="/reservations">Room Reservations</a></p>
+    <p><a href="/guests">All Out Guests</a></p>
 </body>
 </html>
